--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weight Converter</title>
-   
+   <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHWdPBlGSyTPm8iIxGCty6hNP4F-WG7iqrMw&usqp=CAU" type="png">
     <style>
         body {
             font-family: Arial, sans-serif;
